src/test/ui/conditional-compilation/cfg-generic-params.stderr
error: only lifetime parameters can be used in this context
  --> $DIR/cfg-generic-params.rs:7:45
   |
LL | type FnBad = for<#[cfg(no)] 'a, #[cfg(yes)] T> fn();
   |                                             ^

error: only lifetime parameters can be used in this context
  --> $DIR/cfg-generic-params.rs:11:51
   |
LL | type PolyBad = dyn for<#[cfg(no)] 'a, #[cfg(yes)] T> Copy;
   |                                                   ^

error: only lifetime parameters can be used in this context
  --> $DIR/cfg-generic-params.rs:15:54
   |
LL | struct WhereBad where for<#[cfg(no)] 'a, #[cfg(yes)] T> u8: Copy;
   |                                                      ^

error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-generic-params.rs:34:43
   |
LL | struct WhereYes where for<#[cfg_attr(yes, unknown)] 'a> u8: Copy;
   |                                           ^^^^^^^

error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-generic-params.rs:30:40
   |
LL | type PolyYes = dyn for<#[cfg_attr(yes, unknown)] 'a> Copy;
   |                                        ^^^^^^^

error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-generic-params.rs:26:34
   |
LL | type FnYes = for<#[cfg_attr(yes, unknown)] 'a> fn();
   |                                  ^^^^^^^

error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-generic-params.rs:22:29
   |
LL | fn f_ty_yes<#[cfg_attr(yes, unknown)] T>() {}
   |                             ^^^^^^^

error: cannot find attribute `unknown` in this scope
  --> $DIR/cfg-generic-params.rs:19:29
   |
LL | fn f_lt_yes<#[cfg_attr(yes, unknown)] 'a>() {}
   |                             ^^^^^^^

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:6:31
   |
LL | type FnGood = for<#[cfg(yes)] 'a, #[cfg(no)] T> fn(); // OK
   |                               ^^
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:10:37
   |
LL | type PolyGood = dyn for<#[cfg(yes)] 'a, #[cfg(no)] T> Copy; // OK
   |                                     ^^

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:14:40
   |
LL | struct WhereGood where for<#[cfg(yes)] 'a, #[cfg(no)] T> u8: Copy; // OK
   |                                        ^^

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:18:37
   |
LL | fn f_lt_no<#[cfg_attr(no, unknown)] 'a>() {} // OK
   |           --------------------------^^- help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:19:39
   |
LL | fn f_lt_yes<#[cfg_attr(yes, unknown)] 'a>() {}
   |            ---------------------------^^- help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:25:42
   |
LL | type FnNo = for<#[cfg_attr(no, unknown)] 'a> fn(); // OK
   |                                          ^^

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:26:44
   |
LL | type FnYes = for<#[cfg_attr(yes, unknown)] 'a> fn();
   |                                            ^^

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:29:48
   |
LL | type PolyNo = dyn for<#[cfg_attr(no, unknown)] 'a> Copy; // OK
   |                                                ^^

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:30:50
   |
LL | type PolyYes = dyn for<#[cfg_attr(yes, unknown)] 'a> Copy;
   |                                                  ^^

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:33:51
   |
LL | struct WhereNo where for<#[cfg_attr(no, unknown)] 'a> u8: Copy; // OK
   |                                                   ^^

warning: lifetime parameter `'a` never used
  --> $DIR/cfg-generic-params.rs:34:53
   |
LL | struct WhereYes where for<#[cfg_attr(yes, unknown)] 'a> u8: Copy;
   |                                                     ^^

error: aborting due to 8 previous errors

